--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -18,7 +18,7 @@ jobs:
         with:
           go-version: ^1.19
 
-      - name: Run test cases
+      - name: Build
         run: |
           go env
-          go build -tags mysql github.com/tinode/chat/server
+          go build -tags mysql -o tmp github.com/tinode/chat/server
