--- a/.github/workflows/app.yml
+++ b/.github/workflows/app.yml
@@ -59,5 +59,5 @@ jobs:
         with:
           name: tinode
           path: |
-            tinode/dist/server
-            tinode-webapp/static/
+            ./tinode/dist/server
+            ./tinode-webapp/static/
