--- a/.github/workflows/app.yml
+++ b/.github/workflows/app.yml
@@ -53,6 +53,7 @@ jobs:
           cp tinode-webapp/service-worker.js tinode-webapp/static/
           cp tinode-webapp/version.js tinode-webapp/static/
           cp tinode/app app/
+          cp -R tinode/server/templ/ app/
           cp -R tinode-webapp/static/ app/
           mv app/app app/server
 
