--- a/.github/workflows/app.yml
+++ b/.github/workflows/app.yml
@@ -35,8 +35,8 @@ jobs:
       - name: Build go
         run: |
           cd tinode && go build -tags mysql -o app github.com/tinode/chat/server
-          cd tinode && go build -tags mysql -o help_agent github.com/tinode/chat/server/extra/bots/help/agent
-          cd tinode && go build -tags mysql -o server_agent github.com/tinode/chat/server/extra/bots/server/agent
+          go build -tags mysql -o help_agent github.com/tinode/chat/server/extra/bots/help/agent
+          go build -tags mysql -o server_agent github.com/tinode/chat/server/extra/bots/server/agent
 
       - name: Build js
         run: cd tinode-webapp && npm install && npm run build
