--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -1,9 +1,9 @@
-name: App
+name: Docker
 
 on:
   push:
     branches:
-      - '*'
+      - 'extra'
   pull_request:
 
 jobs:
@@ -31,6 +31,19 @@ jobs:
         uses: actions/setup-node@v3
         with:
           node-version: 16
+
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v1
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v1
+
+      - name: Login to Github Container Registry
+        uses: docker/login-action@v1
+        with:
+          registry: ghcr.io
+          username: sysatom
+          password: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Build go
         run: |
@@ -65,3 +78,12 @@ jobs:
         with:
           name: tinode
           path: app
+
+      - name: Build and push server
+        uses: docker/build-push-action@v2
+        with:
+          context: .
+          push: true
+          file: docker/server/Dockerfile
+          tags: |
+            ghcr.io/sysatom/tinode:latest
