--- a/docker/server/Dockerfile
+++ b/docker/server/Dockerfile
@@ -12,11 +12,11 @@ WORKDIR /opt/tinode
 RUN apk add --no-cache bash
 
 # Fetch build from Github.
-ADD app/static .
-ADD app/templ .
-ADD app/server .
-ADD docker/server/config.template ./tinode.conf
-COPY docker/server/entrypoint.sh .
+ADD tinode/app/static .
+ADD tinode/app/templ .
+ADD tinode/app/server .
+ADD tinode/docker/server/config.template ./tinode.conf
+COPY tinode/docker/server/entrypoint.sh .
 RUN chmod +x server && chmod +x entrypoint.sh
 
 ENTRYPOINT ./entrypoint.sh
