--- a/docker/server/Dockerfile
+++ b/docker/server/Dockerfile
@@ -1,4 +1,4 @@
-FROM alpine:3.14
+FROM alpine:latest
 
 ARG VERSION=0.1
 ENV VERSION=$VERSION
@@ -7,17 +7,20 @@ LABEL version=$VERSION
 
 ENV TINODE_URL=""
 
-WORKDIR /opt/tinode
-
 RUN apk add --no-cache bash
 
-# Fetch build from Github.
-ADD app/static .
-ADD app/templ .
-ADD app/tinode .
-ADD docker/server/config.template ./tinode.conf
-RUN chmod +x tinode
+WORKDIR /opt/app
 
-CMD ["./tinode"]
+# Fetch build from Github.
+COPY app/static/ ./static
+COPY app/templ/ ./templ
+COPY app/tinode .
+COPY docker/server/config.template ./tinode.conf
+COPY docker/server/entrypoint.sh .
+
+RUN chmod +x tinode && chmod +x entrypoint.sh
+RUN mkdir subscribe
+
+ENTRYPOINT ./entrypoint.sh
 
 EXPOSE 6060
