--- a/docker/server/docker-compose.yml
+++ b/docker/server/docker-compose.yml
@@ -5,7 +5,7 @@ services:
     image: ghcr.io/sysatom/tinode:latest
     restart: always
     volumes:
-      - ./tinode.conf:/opt/tinode/tinode.conf
+      - ./tinode.conf:/opt/app/tinode.conf
     ports:
       - "6060:6060"
     environment:
