--- a/docker/server/Dockerfile
+++ b/docker/server/Dockerfile
@@ -25,6 +25,7 @@ RUN pwd
 RUN stat tinode
 RUN stat entrypoint.sh
 
-ENTRYPOINT ./entrypoint.sh
+#ENTRYPOINT ./entrypoint.sh
+CMD ["/opt/app/tinode"]
 
 EXPOSE 6060
