--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -48,9 +48,9 @@ jobs:
           go env -w GOOS=linux
           go env -w GOARCH=amd64
           go env
-          go build -tags mysql -o tinode github.com/tinode/chat/server
-          go build -tags mysql -o help_agent github.com/tinode/chat/server/extra/bots/help/agent
-          go build -tags mysql -o server_agent github.com/tinode/chat/server/extra/bots/server/agent
+          GOOS=linux GOARCH=amd64 go build -tags mysql -o tinode github.com/tinode/chat/server
+          GOOS=linux GOARCH=amd64 go build -tags mysql -o help_agent github.com/tinode/chat/server/extra/bots/help/agent
+          GOOS=linux GOARCH=amd64 go build -tags mysql -o server_agent github.com/tinode/chat/server/extra/bots/server/agent
 
       - name: Build js
         run: cd webapp && npm install && npm run build
