--- a/.github/workflows/dispose.yml
+++ b/.github/workflows/dispose.yml
@@ -10,15 +10,17 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Deploy to Docker swarm
-        uses: wshihadeh/docker-deployment-action@v1
+      - name: Install SSH Key
+        uses: shimataro/ssh-key-action@v2
         with:
-          remote_docker_host: ${{ secrets.VPS_REMOTE_DOCKER_HOST }}
-          ssh_private_key: ${{ secrets.VPS_SSH_PRIVATE_KEY }}
-          ssh_public_key: ${{ secrets.VPS_SSH_PUBLIC_KEY }}
-          deployment_mode: docker-swarm
-          copy_stack_file: true
-          deploy_path: /home/www/app
-          stack_file_name: docker-compose.yaml
-          keep_files: 5
-          args: tinode
+          key: ${{ secrets.VPS_SSH_PRIVATE_KEY }}
+
+      - name: Adding Known Hosts
+        run: ssh-keyscan -H ${{ secrets.VPS_SSH_HOST }} >> ~/.ssh/known_hosts
+
+      - name: Docker compose update
+        run: |
+          ssh ${{ secrets.VPS_SSH_USER_AND_HOST }}
+          cd /home/www/app
+          sudo docker pull ghcr.io/sysatom/tinode:latest
+          sudo docker-compose up -d
