--- a/.github/workflows/dispose.yml
+++ b/.github/workflows/dispose.yml
@@ -14,9 +14,7 @@ jobs:
         uses: shimataro/ssh-key-action@v2
         with:
           key: ${{ secrets.VPS_SSH_PRIVATE_KEY }}
-
-      - name: Adding Known Hosts
-        run: ssh-keyscan -H ${{ secrets.VPS_SSH_HOST }} >> ~/.ssh/known_hosts
+          known_hosts: ${{ secrets.VPS_SSH_HOST }}
 
       - name: Docker compose update
         run: |
