--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -49,8 +49,9 @@ jobs:
           go env -w GOARCH=amd64
           go env
           CGO_ENABLED=0 GOOS=linux GOARCH=amd64 go build -tags mysql -o tinode github.com/tinode/chat/server
-          CGO_ENABLED=0 GOOS=linux GOARCH=amd64 go build -tags mysql -o help_agent github.com/tinode/chat/server/extra/bots/help/agent
-          CGO_ENABLED=0 GOOS=linux GOARCH=amd64 go build -tags mysql -o server_agent github.com/tinode/chat/server/extra/bots/server/agent
+          CGO_ENABLED=0 GOOS=linux GOARCH=amd64 go build -tags mysql -o help_agent github.com/tinode/chat/server/extra/bots/help/cmd
+          CGO_ENABLED=0 GOOS=linux GOARCH=amd64 go build -tags mysql -o server_agent github.com/tinode/chat/server/extra/bots/server/cmd
+          CGO_ENABLED=0 GOOS=linux GOARCH=amd64 go build -tags mysql -o anki_agent github.com/tinode/chat/server/extra/bots/anki/cmd
 
       - name: Build js
         run: cd webapp && npm install && npm run build
