web bot, summary command

--- a/server/extra/docs/extra.conf
+++ b/server/extra/docs/extra.conf
@@ -16,5 +16,26 @@
     ],
 
     // Configuration of bots.
-    "bots": []
+    "bots": [
+        // Github
+        {
+            "name": "github",
+            "id": "",
+            "secret": ""
+        },
+        // Pocket
+        {
+            "name": "pocket",
+            "consumer_key": ""
+        }
+    ],
+
+    // Configuration of vendors
+    "vendors": [
+      // OneAI
+      {
+        "name": "oneai",
+        "api_key": ""
+      }
+    ]
 }
