--- a/server/extra/docs/extra.conf
+++ b/server/extra/docs/extra.conf
@@ -31,11 +31,9 @@
     ],
 
     // Configuration of vendors
-    "vendors": [
-      // OneAI
-      {
-        "name": "oneai",
-        "api_key": ""
-      }
-    ]
+    "vendors": {
+        "oneai": {
+            "api_key": ""
+        }
+    }
 }
