--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -37,7 +37,13 @@ jobs:
           path: ${{ env.go-mod }}
           key: ${{ runner.os }}-go-mod-${{ hashFiles('**/go.sum') }}
 
+      - name: golangci-lint
+        uses: golangci/golangci-lint-action@v3
+        with:
+          version: v1.53.3
+
       - name: Build
         run: |
           go env
+          golangci-lint run --timeout=10m --config=./server/extra/.golangci.yaml ./server/extra/...
           go build -tags mysql -o tmp github.com/tinode/chat/server
