--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -46,8 +46,7 @@ jobs:
         uses: golangci/golangci-lint-action@v3
         with:
           version: v1.53.3
-          working-directory: ./server/extra
-          args: --timeout=10m --config=./server/extra/.golangci.yaml
+          args: --timeout=10m --config=./server/extra/.golangci.yaml ./server/extra/...
 
       - name: Build
         run: |
