--- a/server/extra/docs/extra.conf
+++ b/server/extra/docs/extra.conf
@@ -34,6 +34,11 @@
     "vendors": {
         "oneai": {
             "api_key": ""
+        },
+        "rollbar": {
+             "token": "",
+             "environment": "development",
+             "server_root": "github.com/sysatom/tinode"
         }
     }
 }
