chatbot global config

--- a/server/extra/docs/extra.conf
+++ b/server/extra/docs/extra.conf
@@ -15,17 +15,29 @@
         }
     ],
 
+    // chatbot global config
+    "chatbot": {
+        "log": {
+            "level": "info",
+        },
+        "workflow": {
+            "worker": 2
+        }
+    },
+
     // Configuration of bots.
     "bots": [
         // Github
         {
             "name": "github",
+            "enabled": true,
             "id": "",
             "secret": ""
         },
         // Pocket
         {
             "name": "pocket",
+            "enabled": true,
             "consumer_key": ""
         }
     ],
